syntax = "proto3";
package event_main_image;
// option java_multiple_files = true;

// import "google/protobuf/struct.proto";

// ***** EventImage Objects ***** //
message EventMainImageObject {
  string id = 1;
  string agent_id = 2;
  string key = 3;
  string url = 4;
  string type = 5;
  string desc = 6;
  string created_at = 7;
  string updated_at = 8;
  string agent_prefix = 9;
  string lang = 10;
  string title = 11;
  string type_agent = 12;
}

message Options {
  repeated string select = 1;
  int32 skip = 2;
  int32 take = 3;
  map<string,string> order = 4;
}

// ***** EventImage Objects ***** //


// ***** EventImage Status Response ***** //
message StatusResponse {
  bool successful = 1;
  int32 code = 2;
  string message = 3;
}
// ***** EventImage Status Response ***** //

// ***** RequestResponse Insert ***** //
message InsertRequest {
  InsertRequestObject request = 1;
}

message InsertRequestObject {
    string agent_id = 1;
    string key = 2;
    string url = 3;
    string type = 4;
    string desc = 5;
    string created_at = 6;
    string updated_at = 7;
    string agent_prefix = 8;
    string lang = 9;
    string title = 10;
    string type_agent = 11;
}

message InsertResponse {
  InsertResponseObject response = 1;
}

message InsertResponseObject {
  oneof ResponseType 
  {
     StatusResponse status = 1;
     DataInsertResponseObject data = 2;
  }
}

message DataInsertResponseObject {
  repeated DataRawInsertResponseObject raw = 1; 
}

message DataRawInsertResponseObject {
    string id = 1;
    string agent_id = 2;
    string key = 3;
    string url = 4;
    string type = 5;
    string desc = 6;
    string created_at = 7;
    string updated_at = 8;
    string agent_prefix = 9;
    string lang = 10;
    string title = 11;
    string type_agent = 12;
}

// ***** RequestResponse Insert ***** //

// ***** RequestResponse FindOne ***** //
message FindOneRequest {
  FindOneRequestObject request = 1;
}

message FindOneRequestObject{
  EventMainImageObject where = 1;
  Options options = 2;
}

message FindOneResponse {
  FindOneResponseObject response = 1;
}

message FindOneResponseObject {
  oneof ResponseType 
  {
     StatusResponse status = 1;
     EventMainImageObject data = 2;
  }
}

// ***** RequestResponse FindOne ***** //

// ***** RequestResponse FindAll ***** //
message FindAllRequest {
  FindAllRequestObject request = 1;
}

message FindAllRequestObject{
  EventMainImageObject where = 1;
  Options options = 2;
}

message FindAllResponse {
  FindAllResponseObject response = 1;
}

message FindAllResponseObject {
  oneof ResponseType 
  {
     StatusResponse status = 1;
  }
  repeated EventMainImageObject data = 2;
}

// ***** RequestResponse FindAll ***** //

// ***** RequestResponse FindAllWhere ***** //
message FindAllWhereRequest {
  string request = 1;
}

message FindAllWhereRequestObject{
  map<string,string> where = 1;
  FindOptions options = 2;
  repeated string args = 3;
}

message FindAllWhereResponse {
  FindAllWhereResponseObject response = 1;
}

message FindAllWhereResponseObject {
  oneof ResponseType 
  {
     StatusResponse status = 1;
  }
  repeated EventMainImageObject data = 2;
}

message FindOptions {
  repeated string relations = 1;
  repeated string select = 2;
  int32 skip = 3;
  int32 take = 4;
  map<string,string> order = 5;
}
// ***** RequestResponse FindAllWhere ***** //

// ***** RequestResponse Update ***** //
message UpdateRequest {
  EventMainImageObject request = 1;
  EventMainImageObject update = 2;
}

message UpdateResponse {
  UpdateResponseObject response = 1;
}

message UpdateResponseObject {
  oneof ResponseType 
  {
      StatusResponse status = 1;
      DataUpdateResponseObject data = 2;
  }
}

message DataUpdateResponseObject {
  int32 affected = 1;
  repeated DataRawUpdateResponseObject raw = 2;
}

message DataRawUpdateResponseObject {
    string id = 1;
    string agent_id = 2;
    string key = 3;
    string url = 4;
    string type = 5;
    string desc = 6;
    string created_at = 7;
    string updated_at = 8;
    string agent_prefix = 9;
    string lang = 10;
    string title = 11;
    string type_agent = 12;
}
// ***** RequestResponse Update ***** //

// ***** RequestResponse Delete ***** //
message DeleteRequest {
  EventMainImageObject request = 1;
}

message DeleteObject {
  string id = 1;
}

message DeleteResponse {
  DeleteResponseObject response = 1;
}

message DeleteResponseObject {
  oneof ResponseType 
  {
      StatusResponse status = 1;
      DataDeleteResponseObject data = 2;
  }
}

message DataDeleteResponseObject {
  int32 affected = 1;
  repeated DataRawDeleteResponseObject raw = 2;
}

message DataRawDeleteResponseObject {
    string id = 1;
    string agent_id = 2;
    string key = 3;
    string url = 4;
    string type = 5;
    string desc = 6;
    string created_at = 7;
    string updated_at = 8;
    string agent_prefix = 9;
    string lang = 10;
    string title = 11;
    string type_agent = 12;
}
// ***** RequestResponse Delete ***** //


// ***** RequestResponse Count ***** //
message CountRequest {
  CountRequestObject request = 1;
}

message CountRequestObject {
  EventMainImageObject where = 1;
}

message CountResponse {
  CountResponseObject response = 1;
}

message CountResponseObject {
  oneof ResponseType 
  {
    StatusResponse status = 1;
    DataCountResponseObject data = 2;
  }
}

message DataCountResponseObject {
  int32 count = 1;
}
// ***** RequestResponse Count ***** //

// ***** RequestResponse CountAllWhere ***** //
message CountAllWhereRequest {
  string request = 1;
}

message CountAllWhereRequestObject {
  EventMainImageObject where = 1;
  Options options = 2;
  repeated string args = 3;
}

message CountAllWhereResponse {
  CountAllWhereResponseObject response = 1;
}

message CountAllWhereResponseObject {
  oneof ResponseType 
  {
    StatusResponse status = 1;
    DataCountAllWhereResponseObject data = 2;
  }
}

message DataCountAllWhereResponseObject {
  int32 count = 1;
}

message CountOptions {
  repeated string relations = 1;
  repeated string select = 2;
  int32 skip = 3;
  int32 take = 4;
  map<string,string> order = 5;
}
// ***** RequestResponse CountAllWhere ***** //


service EventMainImageService {
  rpc Insert (InsertRequest) returns (InsertResponse) {}
  rpc FindOne (FindOneRequest) returns (FindOneResponse) {}
  rpc FindAll (FindAllRequest) returns (FindAllResponse) {}
  rpc FindAllWhere (FindAllWhereRequest) returns (FindAllWhereResponse) {}
  rpc Update (UpdateRequest) returns (UpdateResponse) {}
  rpc Delete (DeleteRequest) returns (DeleteResponse) {}
  rpc Count (CountRequest) returns (CountResponse) {}
  rpc CountAllWhere (CountAllWhereRequest) returns (CountAllWhereResponse) {}
}

